--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,11 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<!-- map erb 부르는 render 명령 -->
 <%= render :partial => 'home/map' %>
-<div id="map" style="width:750px; height:400px;"></div
+<div class="container">
+  <h1>Home#index</h1>
+  <p>Find me in app/views/home/index.html.erb</p>
+  
+  <div class="row">
+    <!-- 지도 div 입니다 id 말고 다 건드려도 됨-->
+    <div id="map" style="width:750px; height:400px;"></div>
+  </div
+</div>
