--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,5 @@
-<div class="container">
-  <div class="row">
-    <h1>Home#index</h1>
-    <p>Find me in app/views/home/index.html.erb</p>
-  </div>
-  
-  <div class="row">
-    <div class="col-md-3">
-    </div>
-    <div class="col-md-9">
-      <!-- 지도 div 입니다 id 말고 다 건드려도 됨-->
-      <div id="map" style="width:100%; height:400px;"></div>
-    </div>
-  </div>
-</div>
+<script>
+</script>
+
+<!-- 지도 div 입니다 id 말고 다 건드려도 됨-->
+<div id="map" style="width:100%; height:550px;;"></div>
