--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,6 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render :partial => 'home/map' %>
   <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -39,8 +38,11 @@
             <li style="padding-right:80px">
               <a href="/home/labreview">시험장후기</a>
             </li>
-            <li>
+            <li style="padding-right:80px">
               <a href="/home/testreview">시험후기</a>
+            </li>
+            <li>
+              <a href="/home/directionform">길찾기</a>
             </li>
           </ul>
                
@@ -52,7 +54,7 @@
       </div>
     </div>
 
-    <div style="margin-top: 80px">
+    <div style="padding-top: 20px">
       <%= yield %>
     </div>
 </body>
