--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,8 +49,11 @@
             <li style="padding-right:80px">
               <a href="/home/testreview">시험후기</a>
             </li>
-            <li>
+            <li style="padding-right:80px">
               <a href="/home/directionform">길찾기</a>
+            </li>
+            <li>
+              <a href="/home/directionform">시험일정</a>
             </li>
           </ul>
                
