--- a/app/views/home/testreview.html.erb
+++ b/app/views/home/testreview.html.erb
@@ -2,8 +2,6 @@
   $(function() {
     $( "#accordion" ).accordion();
   });
-  
-  // 마우스 위치하면 하이라이트 이벤트
   $(document).ready(function() {
     $('li').mouseenter(function(){
      $(this).animate({
@@ -22,112 +20,110 @@
  
 </body>
 <div class="row">
-  <div class="col-md-2 col-md-offset-2" style="border:1px solid black">
-    <ul class="nav nav-pills nav-stacked">
-      <li role="presentation"><a href="#">토플</a></li>
-      <li role="presentation"><a href="#">토익</a></li>
-      <li role="presentation"><a href="#">토플스피킹</a></li>
-      
-    </ul>    
+  <div class="col-md-2 col-md-offset-2">
+  <ul class="nav nav-tabs nav-stacked">
+    <li role="presentation"><a href="#">전체보기</a></li>
+    <li role="presentation" class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+        토플 <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        <li>Sat., Aug 22, 2015</li>
+        <li>Sun., Aug 30, 2015</li>
+        <li>Sat., Sep 05, 2015</li>
+      </ul>
+    </li>
+    <li role="presentation" class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+        토익 <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        <li>293회 // 8. 9. (일)</li>
+        <li>294회 // 8. 30. (일)</li>
+        <li>295회 // 9. 20. (일)</li>
+      </ul>
+    </li>
+    <li role="presentation" class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+        토플스피킹 <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        <li>2015.08.22</li>
+        <li>2015.08.23</li>
+        <li>2015.08.26</li>
+      </ul>
+    </li>
+  
+</ul>    
   </div>
   <div class="col-md-6">
-    <!--modal 한단위-->
-    <ul class="list-group">
-      <li class="list-group-item"data-toggle="modal" data-target="#a">
-        <span class="badge">14</span>
-        <a style="color:black">토플 후기</a>
-      </li>
-      <div class="modal fade" id="a" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-lg" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="myModalLabel">한양대학교 후기</h4><a>평점,조회수,추천수,작성시간 등등 </a>
+    <div class="panel panel-default">
+        <!-- Table -->
+        <table class="table table-striped table-condensed">
+            <col style="width:10%">
+            <col style="width:20%">
+            <col style="width:40%">
+            <col style="width:10%">
+            <col style="width:10%">
+            <col style="width:10%">
+          <thead>
+            <tr>
+              <th style="text-align:center">번호</th>
+              <th style="text-align:center">시험</th>
+              <th style="text-align:center">제목</th>
+              <th style="text-align:center">작성자</th>
+              <th style="text-align:center">조회수</th>
+              <th style="text-align:center">추천수</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr data-toggle="modal" data-target="#a">
+                <td style="text-align:center">3</td>
+                <td style="text-align:center">토플</td>
+                <td style="text-align:center">토플 그까이꺼</td>
+                <td style="text-align:center">김새봄</td>
+                <td style="text-align:center">100</td>
+                <td style="text-align:center">12</td>
+            </tr>
+            <div class="modal fade" id="a" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">한양대학교 후기</h4><a>평점,조회수,추천수,작성시간 등등 </a>
+                  </div>
+                  <div class="modal-body">
+                    내용+각 부문별 별점(감독관, 시설, 위치 등등)
+                    <form action="" method="POST" class="form-inline">
+                      <input type="text" class="form-control" style="width:90%" placeholder="댓글달기">
+                    <input type="submit" value="댓글달기">
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="modal-body">
-              내용+각 부문별 별점(감독관, 시설, 위치 등등)
-              <form action="" method="POST" class="form-inline">
-                <input type="text" class="form-control" style="width:90%" placeholder="댓글달기">
-              <input type="submit" value="댓글달기">
-              </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
+            <tr data-toggle="modal" data-target="#a">
+                <td style="text-align:center">2</td>
+                <td style="text-align:center">토익</td>
+                <td style="text-align:center">하 왜케 어렵지....</td>
+                <td style="text-align:center">송영현</td>
+                <td style="text-align:center">43</td>
+                <td style="text-align:center">3</td>
+            </tr>
+            <tr data-toggle="modal" data-target="#a">
+                <td style="text-align:center">1</td>
+                <td style="text-align:center">토플스피킹</td>
+                <td style="text-align:center">오오 개쉬움ㅋㅋㅋㅋ</td>
+                <td style="text-align:center">강병욱</td>
+                <td style="text-align:center">53</td>
+                <td style="text-align:center">5</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-      <!--modal 한단위 끝-->
-      <!--modal 한단위-->
-    <ul class="list-group">
-      <li class="list-group-item" data-toggle="modal" data-target="#b">
-        <span class="badge">14</span>
-        <a style="color:black">여기 눌러봐</a>
-      </li>
-      <div class="modal fade" id="b" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-lg" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="myModalLabel">제목</h4>
-            </div>
-            <div class="modal-body">
-              내용
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--modal 한단위 끝-->
-      <!--modal 한단위-->
-    <ul class="list-group">
-      <li class="list-group-item" data-toggle="modal" data-target="#c">
-        <span class="badge">14</span>
-        <a style="color:black">여기 눌러봐</a>
-      </li>
-      <div class="modal fade" id="c" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-lg" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="myModalLabel">제목</h4>
-            </div>
-            <div class="modal-body">
-              내용
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--modal 한단위 끝-->
-      <!--modal 한단위-->
-    <ul class="list-group">
-      <li class="list-group-item" data-toggle="modal" data-target="#d">
-        <span class="badge">14</span>
-        <a style="color:black">여기 눌러봐</a>
-      </li>
-      <div class="modal fade" id="d" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-lg" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="myModalLabel">제목</h4>
-            </div>
-            <div class="modal-body">
-              내용
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--modal 한단위 끝-->
-    </ul>
   </div>
   
 </div>
