--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
   <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="../" class="navbar-brand"><span style="color:red"><b>TOmap</b></span></a>
+          <a href="/" class="navbar-brand"><span style="color:red"><b>TOmap</b></span></a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -44,16 +44,16 @@
               <a href="/">시험장지도</a>
             </li>
             <li style="padding-right:80px">
-              <a href="/home/labreview">시험장후기</a>
+              <a href="/home/labreviewmain/0">시험장후기</a>
             </li>
             <li style="padding-right:80px">
               <a href="/home/testreview">시험후기</a>
             </li>
             <li style="padding-right:80px">
-              <a href="/home/directionform">길찾기</a>
+              <a href="/home/directiontest">길찾기</a>
             </li>
             <li>
-              <a href="/home/directionform">시험일정</a>
+              <a href="#">시험일정</a>
             </li>
           </ul>
                
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div style="padding-top: 20px">
+    <div style="padding-top: 12px; padding-bottom:0px;">
       <%= yield %>
     </div>
 </body>
