--- a/app/views/home/directiontest.html.erb
+++ b/app/views/home/directiontest.html.erb
@@ -2,11 +2,16 @@
   <div class="row">
     <div class="col-md-3">
       현재시간 기준
+      <form action='/home/directiontest' method='post'>
+        <input type="text" name="origin" placeholder="출발지"><br>
+        <input type="text" name="destination" placeholder="도착지"><br>
+        <input type="submit" value="submit">
+      </form>
     </div>
     <div class="col-md-9">
       <iframe
         width=100%
-        height="400"
+        height="500px;"
         frameborder="0" style="border:0"
         src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyDxbMZWBxFjGnTiZOMAeSIm6TFR4BvhFUM
           &origin=<%= @origin %>
