--- a/app/views/home/labreviewmain.html.erb
+++ b/app/views/home/labreviewmain.html.erb
@@ -22,15 +22,16 @@
 <div class="row">
   <div class="col-md-2 col-md-offset-2">
     <ul class="nav nav-pills nav-stacked">
-      <li role="presentation"><a href="/home/labreviewmain/0">전체보기</a></li>
+    <li role="presentation"><a href="/home/labreviewmain">전체보기</a></li>
       <%@testcenter.each do |x|%>
       <li role="presentation"><a href="/home/labreview/<%=x.id%>"><%=x.name%></a></li>
       <%end%>
       
     </ul>    
   </div>
+  
   <div class="col-md-6">
-    <p><%=@testcenter.find(params[:id]).name%>게시판입니다</p>
+    <div>전체보기</div>
     <div class="panel panel-default">
         <!-- Table -->
         <table class="table table-striped table-condensed">
@@ -51,7 +52,34 @@
             </tr>
           </thead>
           <tbody>
-            
+            <tr data-toggle="modal" data-target="#a">
+                <td style="text-align:center">3</td>
+                <td style="text-align:center">한양대(4.5점)</td>
+                <td style="text-align:center">시설 최고!</td>
+                <td style="text-align:center">김새봄</td>
+                <td style="text-align:center">100</td>
+                <td style="text-align:center">12</td>
+            </tr>
+            <div class="modal fade" id="a" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">한양대학교 후기</h4><a>평점,조회수,추천수,작성시간 등등 </a>
+                  </div>
+                  <div class="modal-body">
+                    내용+각 부문별 별점(감독관, 시설, 위치 등등)
+                    <form action="" method="POST" class="form-inline">
+                      <input type="text" class="form-control" style="width:90%" placeholder="댓글달기">
+                    <input type="submit" value="댓글달기">
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
             <tr data-toggle="modal" data-target="#a">
                 <td style="text-align:center">2</td>
                 <td style="text-align:center">국민대(3.7점)</td>
@@ -71,9 +99,7 @@
           </tbody>
         </table>
       </div>
-      <form action="/home/labreview_write/<%=@testcenter.find(params[:id]).id%>">
-          <button type="submit" class="btn btn-primary">후기 작성</button>
-      </form>
+      
   </div>
- 
+  
 </div>
