--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -79,3 +79,15 @@ html, body {
 	opacity: 1 !important;
 }
 
+
+.mypage {
+    border: 1px solid white;
+    border-radius: 25px;
+    width: 60%;
+    height: 800px;
+    background-color: white;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
