--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,19 +1,13 @@
 <div style="text-align:center">
   <p style="font-family:sans-serif; font-size:20px">회원가입</p>
 </div>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signin"}) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signin"},multipart: true) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, class: "form-control" %>
   </div>
-  
-  <div class="field">
-    <%= f.label :nickname%><br />
-    <%= f.text_field :nickname, autofocus: true, class: "form-control" %>
-  </div>
-
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
@@ -25,6 +19,12 @@
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+  </div>
+  
+  <!--프로필사진-->
+  <div class="field">
+    <%= f.label :image %><br />
+    <%= f.file_field :image %>
   </div>
 
   <div class="actions">
