--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -1,28 +1,156 @@
-<script>
-  $(function() {
-    $( "#accordion" ).accordion();
-  });
-  $(document).ready(function() {
-    $('li').mouseenter(function(){
-     $(this).animate({
-    backgroundColor: "#faf0e6"
-  });
-  });
-  $('li').mouseleave(function(){
-     $(this).animate({
-    backgroundColor: "#ffffff"
-  });
-});
-});
-  
-  </script>
 
- 
+
+<!--메인페이지인 경우-->
+<%if params[:id].nil?%>
+<div class="row" style="margin-top: 80px">
+  <div class="col-lg-2"></div>
+  <div class="col-lg-2">
+    <div class="thumbnail">
+      <img src="..." alt="...">
+      <div class="caption">
+        <h4>1위</h4>
+        <p>...</p>
+        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-2">
+    <div class="thumbnail">
+      <img src="..." alt="...">
+      <div class="caption">
+        <h4>2위</h4>
+        <p>...</p>
+        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-2">
+    <div class="thumbnail">
+      <img src="..." alt="...">
+      <div class="caption">
+        <h4>3위</h4>
+        <p>...</p>
+        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-2">
+    <div class="thumbnail">
+      <img src="..." alt="...">
+      <div class="caption">
+        <h4>4위</h4>
+        <p>...</p>
+        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-2"></div>
+</div>  
+
+<div class="row"> 
+  <div class="col-lg-3"></div>
+  <div class="col-lg-6">
+    <div class="input-group">
+      <div class="input-group-btn">
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">지역 <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </div><!-- /btn-group -->
+      <input type="text" class="form-control" aria-label="...">
+    </div>
+  </div>
+  <div class="col-lg-3"></div>
+</div>
+
+
+<div class="row">
+  <div class="col-md-2 col-md-offset-2">
+    <ul class="nav nav-pills nav-stacked">
+    <li role="presentation"><a href="/home/labreview">전체보기</a></li>
+      <%@testcenter.each do |x|%>
+      <li role="presentation"><a href="/home/labreview/<%=x.id%>"><%=x.name%></a></li>
+      <%end%>
+      
+    </ul>    
+  </div>
+  
+  <div class="col-md-6">
+    <p>전체보기</p>
+    
+    <div class="panel panel-default">
+        <!-- Table -->
+        <table class="table table-striped table-condensed">
+            <col style="width:10%">
+            <col style="width:20%">
+            <col style="width:40%">
+            <col style="width:10%">
+            <col style="width:10%">
+            <col style="width:10%">
+          <thead>
+            <tr>
+              <th style="text-align:center">번호</th>
+              <th style="text-align:center">고사장</th>
+              <th style="text-align:center">제목</th>
+              <th style="text-align:center">작성자</th>
+              <th style="text-align:center">조회수</th>
+              <th style="text-align:center">추천수</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @allarticle.reverse.each do |x|%>
+            <tr data-toggle="modal" data-target="#<%=x.id%>">
+                <td style="text-align:center"><%=x.id%></td>
+                <td style="text-align:center"><%=x.testcenter%></td>
+                <td style="text-align:center"><%=x.title%></td>
+                <td style="text-align:center">김새봄</td>
+                <td style="text-align:center">100</td>
+                <td style="text-align:center">12</td>
+            </tr>
+            <div class="modal fade" id="<%=x.id%>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel"><%=x.title%></h4><a>평점,조회수,추천수,작성시간 등등 </a>
+                  </div>
+                  <div class="modal-body">
+                    <%=x.content%>
+                    <form action="" method="POST" class="form-inline">
+                      <input type="text" class="form-control" style="width:90%" placeholder="댓글달기">
+                    <input type="submit" value="댓글달기">
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <%end%>
+            
+          </tbody>
+        </table>
+      </div>
+      <form action="/home/labreview_write">
+          <button type="submit" class="btn btn-primary">후기 작성</button>
+      </form>
+  </div>
+  
+</div>
+
+
+<!--각 학교별 페이지인경우-->
+<%else%>
 
 <div class="row" style="padding-top:20px;">
   <div class="col-md-2 col-md-offset-2">
     <ul class="nav nav-pills nav-stacked">
-      <li role="presentation"><a href="/home/labreviewmain/0">전체보기</a></li>
+      <li role="presentation"><a href="/home/labreview">전체보기</a></li>
       <%@testcenter.each do |x|%>
       <li role="presentation"><a href="/home/labreview/<%=x.id%>"><%=x.name%></a></li>
       <%end%>
@@ -31,6 +159,7 @@
   </div>
   <div class="col-md-6">
     <p><%=@testcenter.find(params[:id]).name%>게시판입니다</p>
+    
     <div class="panel panel-default">
         <!-- Table -->
         <table class="table table-striped table-condensed">
@@ -91,3 +220,4 @@
   </div>
  
 </div>
+<%end%>
