--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -91,3 +91,9 @@ html, body {
     margin-right: auto;
 }
 
+.nav_icon {
+  width: 50px;
+  height: 60px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
