--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,12 @@
   var x;
   var lab_data = [];
   <% @lab_db.each do |x| %>
-    lab_data.push(['<%= x.name %>','<%= x.address %>',{lat:<%= x.position_lat %>, lng:<%= x.position_lng %>}, <%= x.id %>, <%= x.review_point %>]);
+    lab_data.push(['<%= x.name %>',
+                   '<%= x.address %>',
+                   {lat:<%= x.position_lat %>, lng:<%= x.position_lng %>}, 
+                   <%= x.id %>,
+                   <%= x.review_point %>,
+                   '<%= x.region_code %>']);
   <% end %>
 </script>
 <script>
@@ -157,16 +162,16 @@
 
 <script>
   function convertable() {
-    document.getElementById('convertable').innerHTML='<div id="map_button" style="cursor:pointer; margin-bottom:30px;"><p style="font-size:20px;">시험장 지도</p></div>';
+    document.getElementById('convertable').innerHTML='<div class="nav_icon" id="user_menu" style="background-image:url(/icons/user_icon2_5060.png);"></div>';
   } // portable
 </script>
 
 <script>
   $(function() {
-    $('#drawer').show();
+    $('#drawer').hide();
     $('#map_under').show();
     $('#menu_open').hide();
-    $('#menu_close').show();
+    $('#menu_close').hide();
     $('#map_button').click(function() {
       $('#map_under').toggle('blind', 300);
     });
@@ -310,4 +315,4 @@
 <input type="hidden" id="pos_lat">
 <input type="hidden" id="pos_lng">
 <!-- 지도 div 입니다 id 말고 다 건드려도 됨-->
-<div id="map" style="margin-top:6px; width:100%; height:100%;"></div>
+<div id="map" style="width:100%; height:100%;"></div>
